<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.join.JoinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/joinLayoutTitle"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/joinLayoutSubTitle" />

        <EditText
            android:id="@+id/editTextPersonFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/firstName"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="text"
            android:textColorHighlight="@android:color/background_dark"
            android:textColorLink="@android:color/background_dark"
            android:textCursorDrawable="@android:color/background_dark"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPersonLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/lastName"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/DateOfBirth"
            android:inputType="date"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnJoinUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/background_dark"
            android:text="@string/joinLayoutButtonJoin"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/joinLayoutLinkLogin"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            tools:text="@string/joinLayoutLinkLogin" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>